{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 389,
  "lineage": "cf1b94d4-9c41-cae7-20e4-7cbcd62f8c94",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:vpc/vpc-0b15a3aed076b0a15",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0516e80f05bd43226",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08a06c3a0ca1983a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b15a3aed076b0a15",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-030c6c6ae76fd06ae",
            "owner_id": "600627337151"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d31246636f5d2f88",
            "arn": "arn:aws:ec2:us-east-1:600627337151:elastic-ip/eipalloc-0d31246636f5d2f88",
            "domain": "vpc",
            "id": "eipalloc-0d31246636f5d2f88",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-124-228.compute-1.amazonaws.com",
            "public_ip": "34.198.124.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:internet-gateway/igw-0519251e14e39d8db",
            "id": "igw-0519251e14e39d8db",
            "owner_id": "600627337151",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d31246636f5d2f88",
            "association_id": "eipassoc-0fb5ce86030548fe3",
            "connectivity_type": "public",
            "id": "nat-0ebd600fa14a43554",
            "network_interface_id": "eni-0dbbc4da2d40f7d0f",
            "private_ip": "10.0.1.7",
            "public_ip": "34.198.124.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02589856bbc717b6e",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c2b65c77064771601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ebd600fa14a43554",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2b65c7706477160",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c2b65c77064771603854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2b65c7706477160",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-065e940de6a4be39a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030c6c6ae76fd06ae179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030c6c6ae76fd06ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-065e940de6a4be39a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044e734b7b7163da11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ebd600fa14a43554",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044e734b7b7163da1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044e734b7b7163da13854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044e734b7b7163da1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-065e940de6a4be39a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0519251e14e39d8db",
            "id": "r-rtb-0af74d0719764a6dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af74d0719764a6dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af74d0719764a6dc3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af74d0719764a6dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-065e940de6a4be39a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:route-table/rtb-0c2b65c7706477160",
            "id": "rtb-0c2b65c7706477160",
            "owner_id": "600627337151",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:route-table/rtb-044e734b7b7163da1",
            "id": "rtb-044e734b7b7163da1",
            "owner_id": "600627337151",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:route-table/rtb-0af74d0719764a6dc",
            "id": "rtb-0af74d0719764a6dc",
            "owner_id": "600627337151",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05df7f7a2f3f94046",
            "route_table_id": "rtb-0c2b65c7706477160",
            "subnet_id": "subnet-0242c4dcd391a2fa1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022147070e89b1aa2",
            "route_table_id": "rtb-0c2b65c7706477160",
            "subnet_id": "subnet-0574b7b6cc8e687b8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950b896a937b2dc6",
            "route_table_id": "rtb-044e734b7b7163da1",
            "subnet_id": "subnet-04e0fe2da6fb828db"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0250d993b82caa9",
            "route_table_id": "rtb-044e734b7b7163da1",
            "subnet_id": "subnet-0cf58fb22fc2d83ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ec97c2bd275b175",
            "route_table_id": "rtb-0af74d0719764a6dc",
            "subnet_id": "subnet-02589856bbc717b6e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03846556eb522c40b",
            "route_table_id": "rtb-0af74d0719764a6dc",
            "subnet_id": "subnet-00c51f2d0e876ff0d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:subnet/subnet-0242c4dcd391a2fa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0242c4dcd391a2fa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627337151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:subnet/subnet-0574b7b6cc8e687b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574b7b6cc8e687b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627337151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:subnet/subnet-04e0fe2da6fb828db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e0fe2da6fb828db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627337151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:subnet/subnet-0cf58fb22fc2d83ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf58fb22fc2d83ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627337151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:subnet/subnet-02589856bbc717b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02589856bbc717b6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627337151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:subnet/subnet-00c51f2d0e876ff0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c51f2d0e876ff0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627337151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d19ab08000f7b2f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.avilable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:vpc/vpc-0d19ab08000f7b2f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0321c48c48c09d35e",
            "default_route_table_id": "rtb-03fcde0e5bab69de2",
            "default_security_group_id": "sg-025c9b4b6c7862127",
            "dhcp_options_id": "dopt-08a06c3a0ca1983a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d19ab08000f7b2f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fcde0e5bab69de2",
            "owner_id": "600627337151",
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-065e940de6a4be39a",
            "peer_owner_id": "600627337151",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0d19ab08000f7b2f6",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "DEV",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b15a3aed076b0a15"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}